--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://sdk.mercadopago.com/js/v2"></script>
   <meta charset="utf-8">
   <title>Zapdai</title>
   <base href="/">
